Added subscription continuation (#7)
* feat: added subscriptions continuation

* fix: removed doubled test

* Update server/routes/subscription/continue.post.ts


* fix: added manager check

* fix: fixed manager id check

* fix: removed not needed conversions to string

* refactor: added subscription constant

---------
